--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # This .gitignore file should be placed at the root of your Unity project directory
 # node packages
 
-server/node_modules
-server/.idea
+serveur/node_modules
+serveur/.idea
 
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
